--- a/slides/index.html
+++ b/slides/index.html
@@ -755,10 +755,10 @@ div.remove();</code></pre></div></div></div></section><section id="_modification
     &lt;/div&gt;
 &lt;/body&gt;</code></pre></div></div>
 <div class="listingblock"><div class="content"><pre class="highlightjs highlight"><code class="language-javascript hljs" data-noescape="true" data-line-numbers="1|0,1,2" data-lang="javascript">let node = document.getElementById("personName");
-console.log(node.parentNode)
-console.log(node.previousSibling)
-console.log(node.nextSibling)
-console.log(node.childNodes)</code></pre></div></div></div></section><section id="_se_déplacer_dans_le_dom_2" data-auto-animate><h2>Se déplacer dans le DOM</h2><div class="slide-content"><div class="listingblock"><div class="content"><pre class="highlightjs highlight"><code class="language-html hljs" data-noescape="true" data-lang="html">&lt;body&gt;
+console.log(node.parentNode)<i class="conum" data-value="1"></i><b>(1)</b>
+console.log(node.previousSibling)<i class="conum" data-value="2"></i><b>(2)</b>
+console.log(node.nextSibling)<i class="conum" data-value="3"></i><b>(3)</b>
+console.log(node.childNodes)<i class="conum" data-value="4"></i><b>(4)</b></code></pre></div></div></div></section><section id="_se_déplacer_dans_le_dom_2" data-auto-animate><h2>Se déplacer dans le DOM</h2><div class="slide-content"><div class="listingblock"><div class="content"><pre class="highlightjs highlight"><code class="language-html hljs" data-noescape="true" data-lang="html">&lt;body&gt;
     &lt;div&gt;
         &lt;a href="www.google.com"&gt;Un lien&lt;/a&gt;
         &lt;p id="personName"&gt;Georges&lt;/p&gt;
@@ -767,9 +767,9 @@ console.log(node.childNodes)</code></pre></div></div></div></section><section id
 &lt;/body&gt;</code></pre></div></div>
 <div class="listingblock"><div class="content"><pre class="highlightjs highlight"><code class="language-javascript hljs" data-noescape="true" data-line-numbers="0,1,2|0,1,2,3" data-lang="javascript">let node = document.getElementById("personName");
 console.log(node.parentNode)<i class="conum" data-value="1"></i><b>(1)</b>
-console.log(node.previousSibling)
-console.log(node.nextSibling)
-console.log(node.childNodes)</code></pre></div></div>
+console.log(node.previousSibling)<i class="conum" data-value="2"></i><b>(2)</b>
+console.log(node.nextSibling)<i class="conum" data-value="3"></i><b>(3)</b>
+console.log(node.childNodes)<i class="conum" data-value="4"></i><b>(4)</b></code></pre></div></div>
 <div class="colist arabic"><table><tr><td><i class="conum" data-value="1"></i><b>1</b></td><td><code>Output : &lt;div&gt;</code></td></tr></table></div></div></section><section id="_se_déplacer_dans_le_dom_3" data-auto-animate><h2>Se déplacer dans le DOM</h2><div class="slide-content"><div class="listingblock"><div class="content"><pre class="highlightjs highlight"><code class="language-html hljs" data-noescape="true" data-lang="html">&lt;body&gt;
     &lt;div&gt;
         &lt;a href="www.google.com"&gt;Un lien&lt;/a&gt;
@@ -780,8 +780,8 @@ console.log(node.childNodes)</code></pre></div></div>
 <div class="listingblock"><div class="content"><pre class="highlightjs highlight"><code class="language-javascript hljs" data-noescape="true" data-line-numbers="0,1,2,3|0,1,2,3,4" data-lang="javascript">let node = document.getElementById("personName");
 console.log(node.parentNode)<i class="conum" data-value="1"></i><b>(1)</b>
 console.log(node.previousSibling)<i class="conum" data-value="2"></i><b>(2)</b>
-console.log(node.nextSibling)
-console.log(node.childNodes)</code></pre></div></div>
+console.log(node.nextSibling)<i class="conum" data-value="3"></i><b>(3)</b>
+console.log(node.childNodes)<i class="conum" data-value="4"></i><b>(4)</b></code></pre></div></div>
 <div class="colist arabic"><table><tr><td><i class="conum" data-value="1"></i><b>1</b></td><td><code>Output : &lt;div&gt;</code></td></tr><tr><td><i class="conum" data-value="2"></i><b>2</b></td><td><code>Output : &lt;a&gt;</code></td></tr></table></div></div></section><section id="_se_déplacer_dans_le_dom_4" data-auto-animate><h2>Se déplacer dans le DOM</h2><div class="slide-content"><div class="listingblock"><div class="content"><pre class="highlightjs highlight"><code class="language-html hljs" data-noescape="true" data-lang="html">&lt;body&gt;
     &lt;div&gt;
         &lt;a href="www.google.com"&gt;Un lien&lt;/a&gt;
@@ -793,7 +793,7 @@ console.log(node.childNodes)</code></pre></div></div>
 console.log(node.parentNode)<i class="conum" data-value="1"></i><b>(1)</b>
 console.log(node.previousSibling)<i class="conum" data-value="2"></i><b>(2)</b>
 console.log(node.nextSibling)<i class="conum" data-value="3"></i><b>(3)</b>
-console.log(node.childNodes)</code></pre></div></div>
+console.log(node.childNodes)<i class="conum" data-value="4"></i><b>(4)</b></code></pre></div></div>
 <div class="colist arabic"><table><tr><td><i class="conum" data-value="1"></i><b>1</b></td><td><code>Output : &lt;div&gt;</code></td></tr><tr><td><i class="conum" data-value="2"></i><b>2</b></td><td><code>Output : &lt;a&gt;</code></td></tr><tr><td><i class="conum" data-value="3"></i><b>3</b></td><td><code>Output : &lt;img&gt;</code></td></tr></table></div></div></section><section id="_se_déplacer_dans_le_dom_5" data-auto-animate><h2>Se déplacer dans le DOM</h2><div class="slide-content"><div class="listingblock"><div class="content"><pre class="highlightjs highlight"><code class="language-html hljs" data-noescape="true" data-lang="html">&lt;body&gt;
     &lt;div&gt;
         &lt;a href="www.google.com"&gt;Un lien&lt;/a&gt;
@@ -899,16 +899,37 @@ utilisateur.afficherNomComplet();</code></pre></div></div></div></section><secti
     //du code JS
     &lt;/script&gt;
 &lt;/body&gt;</code></pre></div></div>
-<div class="admonitionblock warning"><table><tr><td class="icon"><i class="fa fa-warning" title="Warning"></i></td><td class="content">Pas bien !</td></tr></table></div></div></section><section id="_import_en_html_2" data-auto-animate><h2>Import en html</h2><div class="slide-content"><div class="listingblock"><div class="content"><pre class="highlightjs highlight"><code class="language-html hljs" data-noescape="true" data-lang="html">&lt;body&gt;
+<div class="admonitionblock warning fragment"><table><tr><td class="icon"><i class="fa fa-warning" title="Warning"></i></td><td class="content">Pas bien !</td></tr></table></div></div></section><section id="_import_en_html_2" data-auto-animate><h2>Import en html</h2><div class="slide-content"><div class="listingblock"><div class="content"><pre class="highlightjs highlight"><code class="language-html hljs" data-noescape="true" data-lang="html">&lt;body&gt;
     &lt;p&gt; du texte &lt;/p&gt;
     &lt;script src="chemin/vers/votre/fichier.js"&gt;&lt;/script&gt;
     &lt;script src="chemin/vers/votre/autreFichier.js"&gt;&lt;/script&gt;
 &lt;/body&gt;</code></pre></div></div>
-<div class="admonitionblock important"><table><tr><td class="icon"><i class="fa fa-exclamation-circle" title="Important"></i></td><td class="content">Mieux&#8230;&#8203;</td></tr></table></div></div></section><section id="_import_en_html_3" data-auto-animate><h2>Import en html</h2><div class="slide-content"><div class="listingblock"><div class="content"><pre class="highlightjs highlight"><code class="language-html hljs" data-noescape="true" data-lang="html">&lt;body&gt;
+<div class="admonitionblock important fragment"><table><tr><td class="icon"><i class="fa fa-exclamation-circle" title="Important"></i></td><td class="content">Mieux&#8230;&#8203;</td></tr></table></div></div></section><section id="_import_en_html_3" data-auto-animate><h2>Import en html</h2><div class="slide-content"><div class="listingblock"><div class="content"><pre class="highlightjs highlight"><code class="language-html hljs" data-noescape="true" data-lang="html">&lt;body&gt;
     &lt;button id="b1"&gt;Créer un utilisateur&lt;/button&gt;
     &lt;script type="module" src="app.js"&gt;&lt;/script&gt;
 &lt;/body&gt;</code></pre></div></div>
-<div class="admonitionblock tip"><table><tr><td class="icon"><i class="fa fa-lightbulb-o" title="Tip"></i></td><td class="content">Très bien !</td></tr></table></div></div></section></section></div></div><script src="reveal.js/dist/reveal.js"></script><script>Array.prototype.slice.call(document.querySelectorAll('.slides section')).forEach(function(slide) {
+<div class="admonitionblock tip fragment"><table><tr><td class="icon"><i class="fa fa-lightbulb-o" title="Tip"></i></td><td class="content">Très bien !</td></tr></table></div></div></section></section>
+<section><section id="_le_json"><h2>Le JSON</h2></section><section id="_structure"><h2>Structure</h2><div class="slide-content"><div class="listingblock"><div class="content"><pre class="highlightjs highlight"><code class="language-json hljs" data-noescape="true" data-lang="json">{
+    "person": {
+        "name": "John Doe",
+        "age": 30,
+        "city": "New York",
+        "isStudent": false,
+        "courses": ["Math", "History"]
+    }
+}</code></pre></div></div></div></section><section id="_convertir_en_json"><h2>Convertir en JSON</h2><div class="slide-content"><div class="listingblock"><div class="content"><pre class="highlightjs highlight"><code class="language-javascript hljs" data-noescape="true" data-lang="javascript">const person = {
+  name: 'John',
+  age: 30,
+  city: 'New York'
+};
+
+const jsonString = JSON.stringify(person);
+console.log(jsonString); <i class="conum" data-value="1"></i><b>(1)</b></code></pre></div></div>
+<div class="colist arabic fragment"><table><tr><td><i class="conum" data-value="1"></i><b>1</b></td><td><code>Output : {name: 'John', age: 30, city: "New York"}</code></td></tr></table></div></div></section><section id="_convertir_en_objet"><h2>Convertir en objet</h2><div class="slide-content"><div class="listingblock"><div class="content"><pre class="highlightjs highlight"><code class="language-javascript hljs" data-noescape="true" data-lang="javascript">const jsonString = '{"name":"John","age":30,"city":"New York"}';
+
+const person = JSON.parse(jsonString);
+console.log(person);<i class="conum" data-value="1"></i><b>(1)</b></code></pre></div></div>
+<div class="colist arabic fragment"><table><tr><td><i class="conum" data-value="1"></i><b>1</b></td><td><code>Output : {"name":"John","age":30,"city":"New York"}</code></td></tr></table></div></div></section></section></div></div><script src="reveal.js/dist/reveal.js"></script><script>Array.prototype.slice.call(document.querySelectorAll('.slides section')).forEach(function(slide) {
   if (slide.getAttribute('data-background-color')) return;
   // user needs to explicitly say he wants CSS color to override otherwise we might break custom css or theme (#226)
   if (!(slide.classList.contains('canvas') || slide.classList.contains('background'))) return;
